Added Category, New Tests